fix "cannot scroll at end when #main too short"

--- a/source/css/_common/outline/sidebar/sidebar.styl
+++ b/source/css/_common/outline/sidebar/sidebar.styl
@@ -4,6 +4,7 @@
   top: 0;
   bottom: 0;
   the-transition();
+  position: relative;
 
   +tablet-mobile() {
     display: none;
@@ -35,6 +36,7 @@
     align-items: flex-start;
     flex-wrap: wrap;
     z-index: $zindex-1;
+    position: absolute;
   }
 }
 
